@@ -1,3 +1,8 @@
+Thu Nov 12 16:34:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm.c (thread_recycle_stack, rb_thread_recycle_stack_release):
+	  stack belongs to no object space.
+
 Thu Nov 12 14:33:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* thread_win32.c (thread_errno): CreateThread does not set errno.
